--- a/portfolio/myportfolio/templates/index.html
+++ b/portfolio/myportfolio/templates/index.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 <!-- Slider -->
+<head>
+    <script data-ad-client="ca-pub-1430676964230735" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>   
+</head>
+
 <section id="hero-area">
     <div class="container">
         <div class="row">
